; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_add_patterns_from_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_add_patterns_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_patterns_from_file(%struct.dir_struct* %0, i8* %1) #0 {
  %3 = alloca %struct.dir_struct*, align 8
  %4 = alloca i8*, align 8
  store %struct.dir_struct* %0, %struct.dir_struct** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.dir_struct*, %struct.dir_struct** %3, align 8
  %6 = getelementptr inbounds %struct.dir_struct, %struct.dir_struct* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 4
  %9 = load %struct.dir_struct*, %struct.dir_struct** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @add_patterns_from_file_1(%struct.dir_struct* %9, i8* %10, i32* null)
  ret void
}

declare dso_local i32 @add_patterns_from_file_1(%struct.dir_struct*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
